@@ -2598,11 +2598,10 @@ if(NOT DISABLE_DAG)
         cmake_push_check_state()
         set(CMAKE_REQUIRED_INCLUDES ${DAG_INCLUDE_DIRS})
         set(CMAKE_REQUIRED_LIBRARIES ${DAG_LIBRARIES})
-        check_function_exists(dag_attach_stream HAVE_DAG_STREAMS_API)
+        check_function_exists(dag_attach_stream64 HAVE_DAG_STREAMS_API)
         if(NOT HAVE_DAG_STREAMS_API)
-            message(FATAL_ERROR "DAG library lacks streams support")
+            message(FATAL_ERROR "DAG library lacks 64-bit streams support")
         endif()
-        check_function_exists(dag_attach_stream64 HAVE_DAG_LARGE_STREAMS_API)
         cmake_pop_check_state()
 
         include_directories(AFTER ${DAG_INCLUDE_DIRS})
@@ -2613,15 +2612,13 @@ if(NOT DISABLE_DAG)
         set(LIBS_STATIC "${LIBS_STATIC} ${DAG_LIBS_STATIC}")
         set(LIBS_PRIVATE "${LIBS_PRIVATE} ${DAG_LIBS_PRIVATE}")
 
-        if(HAVE_DAG_LARGE_STREAMS_API)
-            get_filename_component(DAG_LIBRARY_DIR ${DAG_LIBRARY} PATH)
-            check_library_exists(vdag vdag_set_device_info ${DAG_LIBRARY_DIR} HAVE_DAG_VDAG)
-            if(HAVE_DAG_VDAG)
-                set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-                set(LIBS "${LIBS} ${CMAKE_THREAD_LIBS_INIT}")
-                set(LIBS_STATIC "${LIBS_STATIC} ${CMAKE_THREAD_LIBS_INIT}")
-                set(LIBS_PRIVATE "${LIBS_PRIVATE} ${CMAKE_THREAD_LIBS_INIT}")
-            endif()
+        get_filename_component(DAG_LIBRARY_DIR ${DAG_LIBRARY} PATH)
+        check_library_exists(vdag vdag_set_device_info ${DAG_LIBRARY_DIR} HAVE_DAG_VDAG)
+        if(HAVE_DAG_VDAG)
+            set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+            set(LIBS "${LIBS} ${CMAKE_THREAD_LIBS_INIT}")
+            set(LIBS_STATIC "${LIBS_STATIC} ${CMAKE_THREAD_LIBS_INIT}")
+            set(LIBS_PRIVATE "${LIBS_PRIVATE} ${CMAKE_THREAD_LIBS_INIT}")
         endif()
     endif()
 endif()
